Center content and fix overlapping containers

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,12 +47,16 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #footer {
   background-color: #444;
-  color: #aaa;
-  font-size: .8rem;
+
   letter-spacing: 0.1rem;
   padding: 2.5rem;
   text-align: center;
   text-transform: uppercase;
+}
+
+#footer p {
+	color: #aaa;
+  font-size: .8rem;
 }
 /* ====================== Navigation ====================== */
 nav {
@@ -127,7 +131,7 @@ nav h1 a {
 	display: flex;
 	flex-flow: row wrap;
   width: 100%;
-  height: 5rem;
+  height: 100%;
   background-color: #3397DB;
   align-items: center;
 }
@@ -155,7 +159,7 @@ nav h1 a {
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: space-evenly;
-	width: 100%;
+	max-width: 100%;
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
@@ -216,6 +220,10 @@ nav h1 a {
   width: 100%;
   z-index: 1000;
 }
+.inside #maincontent {
+	display: flex;
+	flex-direction: column;
+}
 .inside #map-container {
   background: blue none repeat scroll 0 0;
   height: 87%;
@@ -231,8 +239,13 @@ nav h1 a {
 }
 .inside #footer {
   bottom: 0;
-  position: absolute;
-  width: 50%;
+  position: relative;
+  max-width: 50%;
+	padding: 0;
+}
+.inside #footer p {
+	font-size: 0.8rem;
+	padding: 2rem;
 }
 #restaurant-name {
   color: #f18200;
@@ -264,14 +277,15 @@ nav h1 a {
 	width: 90%;
 }
 #restaurant-container, #reviews-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	align-content: center;
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  max-width: 50%;
 }
-#reviews-container {
-  padding: 30px 40px 80px;
-}
+
 #reviews-container h2 {
   color: #f58500;
   font-size: 24pt;
@@ -280,6 +294,9 @@ nav h1 a {
   padding-bottom: 1pt;
 }
 #reviews-list {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
   margin: 0;
   padding: 0;
 }
